CSS file completed. Restart button centered, game rounds div aligned correctly, h2 and h3 colored for a better visibility

--- a/style.css
+++ b/style.css
@@ -4,3 +4,19 @@ html {
     background-color: darkslategrey;
     color: white;
 }
+
+#restartButton {
+    width: 125px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#joueurs {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#joueurs h2, #joueurs h3 {
+    color: yellow;
+}
